--- a/scripts/Makefile.modpost
+++ b/scripts/Makefile.modpost
@@ -94,7 +94,7 @@ __modpost: $(modules:.ko=.o) FORCE
 quiet_cmd_kernel-mod = MODPOST $@
       cmd_kernel-mod = $(modpost) $@
 
-vmlinux.o: FORCE
+vmlinux.o: 
 	$(call cmd,kernel-mod)
 
 # Declare generated files as targets for modpost
