--- a/drivers/cpufreq/Kconfig
+++ b/drivers/cpufreq/Kconfig
@@ -100,6 +100,31 @@ config CPU_FREQ_DEFAULT_GOV_CONSERVATIVE
 	  governor. If unsure have a look at the help section of the
 	  driver. Fallback governor will be the performance governor.
 
+config CPU_FREQ_DEFAULT_GOV_ZZMOOVE
+ 	bool "zzmoove"
+ 	select CPU_FREQ_GOV_ZZMOOVE
+ 	help
+ 	  Use the CPUFreq governor 'zzmoove' as default.
+ 
+ config CPU_FREQ_DEFAULT_GOV_ALUCARD
+ 	bool "alucard"
+ 	select CPU_FREQ_GOV_ALUCARD
+ 	help
+ 	  Use the CPUFreq governor 'interactive' as default.
+
+config CPU_FREQ_DEFAULT_GOV_ELEMENTALX
+	bool "elementalx"
+	select CPU_FREQ_GOV_ELEMENTALX
+	select CPU_FREQ_GOV_PERFORMANCE
+	help
+	  Use the CPUFreq governor 'elementalx' as default.
+
+config CPU_FREQ_DEFAULT_GOV_SMARTMAX_EPS
+         bool "smartmax_eps"
+         select CPU_FREQ_GOV_SMARTMAX_EPS
+         help
+           Use the CPUFreq governor 'smartmax eps' as default
+	  
 config CPU_FREQ_DEFAULT_GOV_INTERACTIVE
 	bool "interactive"
 	select CPU_FREQ_GOV_INTERACTIVE
@@ -206,6 +231,37 @@ config CPU_FREQ_GOV_CONSERVATIVE
 
 	  If in doubt, say N.
 
+config CPU_FREQ_GOV_ELEMENTALX
+	tristate "'elementalx' cpufreq policy governor"
+	select CPU_FREQ_TABLE
+	help
+	  'elementalx' - This driver adds a dynamic cpufreq policy governor.
+
+	  To compile this driver as a module, choose M here: the
+	  module will be called cpufreq_elementalx.
+
+	  For details, take a look at linux/Documentation/cpu-freq.
+
+	  If in doubt, say N.
+
+config CPU_FREQ_GOV_ALUCARD
+ 	tristate "'alucard' cpufreq governor"
+ 	depends on CPU_FREQ
+ 	help
+ 	'alucard' - a custom governor.
+ 
+config CPU_FREQ_GOV_ZZMOOVE
+ 	tristate "'zzmoove' cpufreq governor"
+ 	depends on CPU_FREQ
+ 	help
+ 	'zzmoove' - a custom governor.
+
+config CPU_FREQ_GOV_SMARTMAX_EPS
+         tristate "'smartmax EPS' cpufreq policy governor"
+         select CPU_FREQ_TABLE
+         help
+         'smartmax EPS' is the extreme powersaving version of smartmax
+	  
 config CPU_BOOST
 	tristate "Event base short term CPU freq boost"
 	depends on CPU_FREQ
