--- a/arch/arm/configs/lineageos_cancro_defconfig
+++ b/arch/arm/configs/lineageos_cancro_defconfig
@@ -74,7 +74,7 @@ CONFIG_MSM_RPM_RBCPR_STATS_V2_LOG=y
 CONFIG_MSM_DIRECT_SCLK_ACCESS=y
 CONFIG_MSM_EVENT_TIMER=y
 CONFIG_MSM_BUS_SCALING=y
-CONFIG_MSM_WATCHDOG_V2=y
+# CONFIG_MSM_WATCHDOG_V2 is not set
 CONFIG_MSM_MEMORY_DUMP=y
 # CONFIG_MSM_DLOAD_MODE is not set
 CONFIG_MSM_JTAG=y
