--- a/arch/arm/configs/lineageos_cancro_defconfig
+++ b/arch/arm/configs/lineageos_cancro_defconfig
@@ -721,3 +721,4 @@ CONFIG_CRYPTO_SHA256=y
 CONFIG_CRYPTO_SHA256_ARM=y
 CONFIG_MSM_KGSL_PSTMRTMDMP_CP_STAT_NO_DETAIL=y
 CONFIG_MSM_KGSL_PSTMRTMDMP_NO_IB_DUMP=y
+PM_SYNC_BEFORE_SUSPEND=y
