clock-krait-8974: Expose SPEED level via sysfs

--- a/arch/arm/configs/lineageos_cancro_defconfig
+++ b/arch/arm/configs/lineageos_cancro_defconfig
@@ -117,10 +117,6 @@ CONFIG_CPU_FREQ=y
 CONFIG_CPU_FREQ_GOV_ONDEMAND=y
 CONFIG_CPU_FREQ_GOV_INTERACTIVE=y
 CONFIG_CPU_FREQ_GOV_CONSERVATIVE=y
-CONFIG_CPU_FREQ_GOV_ELEMENTALX=y
-CONFIG_CPU_FREQ_GOV_ALUCARD=y
-CONFIG_CPU_FREQ_GOV_ZZMOOVE=y
-CONFIG_CPU_FREQ_GOV_SMARTMAX_EPS=y
 CONFIG_CPU_BOOST=y
 CONFIG_CPU_IDLE=y
 CONFIG_VFP=y
@@ -688,7 +684,12 @@ CONFIG_CRYPTO_TWOFISH=y
 CONFIG_CRYPTO_DEV_QCRYPTO=y
 CONFIG_CRYPTO_DEV_QCE=y
 CONFIG_CRYPTO_DEV_QCEDEV=y
-#Izer
+
+#Izer Kernel
+CONFIG_CPU_FREQ_GOV_ELEMENTALX=y
+CONFIG_CPU_FREQ_GOV_ALUCARD=y
+CONFIG_CPU_FREQ_GOV_ZZMOOVE=y
+CONFIG_CPU_FREQ_GOV_SMARTMAX_EPS=y
 CONFIG_HOTPLUG_CPU=y
 CONFIG_INTELLI_PLUG=y
 CONFIG_ALUCARD_HOTPLUG=y
@@ -722,3 +723,4 @@ CONFIG_CRYPTO_SHA256_ARM=y
 CONFIG_MSM_KGSL_PSTMRTMDMP_CP_STAT_NO_DETAIL=y
 CONFIG_MSM_KGSL_PSTMRTMDMP_NO_IB_DUMP=y
 PM_SYNC_BEFORE_SUSPEND=y
+SPEED_LEVEL_INTERFACE=y
