intelli-thermal v2: initial adaptation
Intellithermal 2.0 is based on the latest Qualcomm thermal driver adapted for
in-kernel use and control.  Newer MSM8974+ chipsets should use this driver
going forward

Signed-off-by: Paul Reioux <reioux@gmail.com>

--- a/arch/arm/configs/lineageos_cancro_defconfig
+++ b/arch/arm/configs/lineageos_cancro_defconfig
@@ -724,3 +724,4 @@ CONFIG_MSM_KGSL_PSTMRTMDMP_CP_STAT_NO_DETAIL=y
 CONFIG_MSM_KGSL_PSTMRTMDMP_NO_IB_DUMP=y
 PM_SYNC_BEFORE_SUSPEND=y
 SPEED_LEVEL_INTERFACE=y
+CONFIG_INTELLI_THERMAL_V2=y
