cpufreq: Add lionheart governor

--- a/drivers/cpufreq/Kconfig
+++ b/drivers/cpufreq/Kconfig
@@ -119,6 +119,12 @@ config CPU_FREQ_DEFAULT_GOV_ELEMENTALX
 	help
 	  Use the CPUFreq governor 'elementalx' as default.
 
+config CPU_FREQ_DEFAULT_GOV_LIONHEART
+        bool "lionheart"
+        select CPU_FREQ_GOV_LIONHEART
+        help
+        Use the CPUFreq governor 'lionheart' as default.
+
 config CPU_FREQ_DEFAULT_GOV_SMARTMAX_EPS
          bool "smartmax_eps"
          select CPU_FREQ_GOV_SMARTMAX_EPS
@@ -255,6 +261,13 @@ config CPU_FREQ_GOV_ZZMOOVE
  	depends on CPU_FREQ
  	help
  	'zzmoove' - a custom governor.
+
+config CPU_FREQ_GOV_LIONHEART
+        tristate "'lionheart' cpufreq governor"
+        depends on CPU_FREQ
+        help
+        lionheart' - a "smart" optimized governor!
+        If in doubt, say N.
 
 config CPU_FREQ_GOV_SMARTMAX_EPS
          tristate "'smartmax EPS' cpufreq policy governor"
