--- a/arch/arm/configs/lineageos_cancro_defconfig
+++ b/arch/arm/configs/lineageos_cancro_defconfig
@@ -689,6 +689,7 @@ CONFIG_CRYPTO_DEV_QCEDEV=y
 CONFIG_CPU_FREQ_GOV_ELEMENTALX=y
 CONFIG_CPU_FREQ_GOV_ALUCARD=y
 CONFIG_CPU_FREQ_GOV_ZZMOOVE=y
+CONFIG_CPU_FREQ_GOV_LIONHEART=y
 CONFIG_CPU_FREQ_GOV_SMARTMAX_EPS=y
 CONFIG_HOTPLUG_CPU=y
 CONFIG_INTELLI_PLUG=y
