--- a/arch/arm/configs/lineageos_cancro_defconfig
+++ b/arch/arm/configs/lineageos_cancro_defconfig
@@ -117,7 +117,7 @@ CONFIG_CPU_FREQ=y
 CONFIG_CPU_FREQ_GOV_ONDEMAND=y
 CONFIG_CPU_FREQ_GOV_INTERACTIVE=y
 CONFIG_CPU_FREQ_GOV_CONSERVATIVE=y
-CONFIG_CPU_BOOST=y
+# CONFIG_CPU_BOOST is not set
 CONFIG_CPU_IDLE=y
 CONFIG_VFP=y
 CONFIG_NEON=y
@@ -735,3 +735,4 @@ CONFIG_MSM_KGSL_PSTMRTMDMP_NO_IB_DUMP=y
 PM_SYNC_BEFORE_SUSPEND=y
 SPEED_LEVEL_INTERFACE=y
 CONFIG_INTELLI_THERMAL_V2=y
+CONFIG_CPU_INPUT_BOOST=y
