--- a/arch/arm/configs/lineageos_cancro_defconfig
+++ b/arch/arm/configs/lineageos_cancro_defconfig
@@ -700,6 +700,7 @@ CONFIG_CPU_FREQ_GOV_ONDEMANDPLUS=y
 CONFIG_CPU_FREQ_GOV_YANKACTIVE=y
 CONFIG_CPU_FREQ_GOV_IMPULSE=y
 CONFIG_CPU_FREQ_GOV_NIGHTMARE=y
+CONFIG_CPU_INPUT_BOOST=y
 CONFIG_HOTPLUG_CPU=y
 CONFIG_INTELLI_PLUG=y
 CONFIG_ALUCARD_HOTPLUG=y
@@ -735,4 +736,4 @@ CONFIG_MSM_KGSL_PSTMRTMDMP_NO_IB_DUMP=y
 PM_SYNC_BEFORE_SUSPEND=y
 SPEED_LEVEL_INTERFACE=y
 CONFIG_INTELLI_THERMAL_V2=y
-CONFIG_CPU_INPUT_BOOST=y
+CONFIG_FRANDOM=y
