--- a/arch/arm/configs/lineageos_cancro_defconfig
+++ b/arch/arm/configs/lineageos_cancro_defconfig
@@ -711,9 +711,11 @@ CONFIG_DEFAULT_TCP_CONG="westwood"
 CONFIG_SWAP=y
 CONFIG_CGROUP_MEM_RES_CTLR=y
 CONFIG_CGROUP_MEM_RES_CTLR_SWAP=y
+CONFIG_ZCACHE=y
 CONFIG_ZRAM=y
-CONFIG_QCACHE=y
+CONFIG_ZRAM_LZ4_COMPRESS=y
 CONFIG_ZSMALLOC=y
+CONFIG_QCACHE=y
 CONFIG_POWERSUSPEND=y
 CONFIG_F2FS_FS=y
 CONFIG_F2FS_STAT_FS=y
