--- a/arch/arm/configs/lineageos_cancro_defconfig
+++ b/arch/arm/configs/lineageos_cancro_defconfig
@@ -724,9 +724,11 @@ CONFIG_DEFAULT_TCP_CONG="westwood"
 CONFIG_SWAP=y
 CONFIG_CGROUP_MEM_RES_CTLR=y
 CONFIG_CGROUP_MEM_RES_CTLR_SWAP=y
+CONFIG_ZCACHE=y
 CONFIG_ZRAM=y
-CONFIG_QCACHE=y
+CONFIG_ZRAM_LZ4_COMPRESS=y
 CONFIG_ZSMALLOC=y
+CONFIG_QCACHE=y
 CONFIG_POWERSUSPEND=y
 CONFIG_RWSEM_XCHGADD_ALGORITHM=y
 CONFIG_CRYPTO_SHA256=y
