msm: Add MSM hotplug driver
* Hotplugging enabled by default.

Signed-off-by: Pranav Vashi <neobuddy89@gmail.com>

--- a/arch/arm/configs/lineageos_cancro_defconfig
+++ b/arch/arm/configs/lineageos_cancro_defconfig
@@ -704,6 +704,7 @@ CONFIG_CPU_INPUT_BOOST=y
 CONFIG_HOTPLUG_CPU=y
 CONFIG_INTELLI_PLUG=y
 CONFIG_ALUCARD_HOTPLUG=y
+CONFIG_MSM_HOTPLUG=y
 CONFIG_CRYPTO_LZ4=y
 CONFIG_FORCE_FAST_CHARGE=y
 CONFIG_TCP_CONG_ADVANCED=y
