--- a/arch/arm/configs/lineageos_cancro_defconfig
+++ b/arch/arm/configs/lineageos_cancro_defconfig
@@ -705,6 +705,7 @@ CONFIG_HOTPLUG_CPU=y
 CONFIG_INTELLI_PLUG=y
 CONFIG_ALUCARD_HOTPLUG=y
 CONFIG_MSM_HOTPLUG=y
+CONFIG_BRICKED_HOTPLUG=y
 CONFIG_CRYPTO_LZ4=y
 CONFIG_FORCE_FAST_CHARGE=y
 CONFIG_TCP_CONG_ADVANCED=y
