--- a/arch/arm/configs/lineageos_cancro_defconfig
+++ b/arch/arm/configs/lineageos_cancro_defconfig
@@ -117,7 +117,7 @@ CONFIG_CPU_FREQ=y
 CONFIG_CPU_FREQ_GOV_ONDEMAND=y
 CONFIG_CPU_FREQ_GOV_INTERACTIVE=y
 CONFIG_CPU_FREQ_GOV_CONSERVATIVE=y
-# CONFIG_CPU_BOOST is not set
+CONFIG_CPU_BOOST=y
 CONFIG_CPU_IDLE=y
 CONFIG_VFP=y
 CONFIG_NEON=y
@@ -700,7 +700,7 @@ CONFIG_CPU_FREQ_GOV_ONDEMANDPLUS=y
 CONFIG_CPU_FREQ_GOV_YANKACTIVE=y
 CONFIG_CPU_FREQ_GOV_IMPULSE=y
 CONFIG_CPU_FREQ_GOV_NIGHTMARE=y
-CONFIG_CPU_INPUT_BOOST=y
+# CONFIG_CPU_INPUT_BOOST is not set
 CONFIG_HOTPLUG_CPU=y
 CONFIG_INTELLI_PLUG=y
 CONFIG_ALUCARD_HOTPLUG=y
