--- a/arch/arm/configs/lineageos_cancro_defconfig
+++ b/arch/arm/configs/lineageos_cancro_defconfig
@@ -699,6 +699,7 @@ CONFIG_CPU_FREQ_GOV_PEGASUSQ=y
 CONFIG_CPU_FREQ_GOV_ONDEMANDPLUS=y
 CONFIG_CPU_FREQ_GOV_YANKACTIVE=y
 CONFIG_CPU_FREQ_GOV_IMPULSE=y
+CONFIG_CPU_FREQ_GOV_BLU_ACTIVE=y
 CONFIG_CPU_FREQ_GOV_NIGHTMARE=y
 # CONFIG_CPU_INPUT_BOOST is not set
 CONFIG_HOTPLUG_CPU=y
