Enable dt2w and s2w support and update defconfig

--- a/arch/arm/configs/lineageos_cancro_defconfig
+++ b/arch/arm/configs/lineageos_cancro_defconfig
@@ -745,3 +745,6 @@ CONFIG_SIMPLE_GPU_ALGORITHM=y
 CONFIG_STATE_NOTIFIER=y
 CONFIG_MSM_LIMITER=y
 CONFIG_F2FS_FS=y
+CONFIG_TOUCHSCREEN_SWEEP2WAKE=y
+CONFIG_TOUCHSCREEN_DOUBLETAP2WAKE=y
+CONFIG_TOUCHSCREEN_PREVENT_SLEEP=y
