--- a/arch/arm/configs/lineageos_cancro_defconfig
+++ b/arch/arm/configs/lineageos_cancro_defconfig
@@ -1,6 +1,6 @@
 # CONFIG_ARM_PATCH_PHYS_VIRT is not set
 CONFIG_EXPERIMENTAL=y
-CONFIG_LOCALVERSION="AospExtended"
+CONFIG_LOCALVERSION="AospExtended by Thinhx2-South Viet Nam-Republic of Viet Nam"
 CONFIG_KERNEL_LZMA=y
 CONFIG_SYSVIPC=y
 CONFIG_AUDIT=y
